--- a/index.html
+++ b/index.html
@@ -4,65 +4,77 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/styles/main.css" />
         <title>TEC Cafe</title>
-            </head>
-    <body>
-        <h1>TEC Cafe</h1>
-        <h3>Current Layout</h3>
-        <div class="layout">
-            <div class="Row">
-                <div class="rows" id = "row1">
-                    <div class="container">
-                        <button class = "pcButtons" id = "d1">D1</button>
-                        <button class = "pcButtons" id = "d2">D2</button>
-                        <button class = "pcButtons" id = "d3">D3</button>
-                        <button class = "pcButtons" id = "d4">D4</button>
-                        <button class = "pcButtons" id = "d5">D5</button>
-                        <button class = "pcButtons" id = "d6">D6</button>
-                    </div>
-                </div>
-                <div class="rows" id = "row2">
-                    <div class="container">
-                        <button class = "pcButtons" id = "c1">C1</button>
-                        <button class = "pcButtons" id = "c2">C2</button>
-                        <button class = "pcButtons" id = "c3">C3</button>
-                        <button class = "pcButtons" id = "c4">C4</button>
-                        <button class = "pcButtons" id = "c5">C5</button>
-                        <button class = "pcButtons" id = "c6">C6</button>
-                    </div>
-                </div>
-                <div class="rows" id = "row3">
-                    <div class="container">
-                        <button class = "pcButtons" id = "b1">B1</button>
-                        <button class = "pcButtons" id = "b2">B2</button>
-                        <button class = "pcButtons" id = "b3">B3</button>
-                        <button class = "pcButtons" id = "b4">B4</button>
-                        <button class = "pcButtons" id = "b5">B5</button>
-                    </div>
-                </div>
-                <div class="rows" id = "row4">
-                    <div class="container">
-                        <button class = "pcButtons" id = "a1">A1</button>
-                        <button class = "pcButtons" id = "a2">A2</button>
-                        <button class = "pcButtons" id = "a3">A3</button>
-                        <button class = "pcButtons" id = "a4">A4</button>
-                        <button class = "pcButtons" id = "a5">A5</button>
-                    </div>
-                </div>
-
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">TEC Cafe</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">New Layout</a>
+                <a class="nav-item nav-link" href="#">Reservations</a>
+              </div>
             </div>
-            <div class="Column">
-                <div class="columns" id = "column1">
-                    <div class="container2">
-                        <button class = "pcButtons" id = "e1">E1</button>
-                        <button class = "pcButtons" id = "e2">E2</button>
-                        <button class = "pcButtons" id = "e3">E3</button>
-                        <button class = "pcButtons" id = "e4">E4</button>
-                        <button class = "pcButtons" id = "e5">E5</button>
-                    </div>
+        </nav>
+    </head>
+    <body>
+        <div class="layout">
+            <div id="Row">
+                <div class="container" id = "row1">
+                    <button class = "pcButtons" id = "d1" onClick="updatePC('d1')">D1</button>
+                    <button class = "pcButtons" id = "d2" onClick="updatePC('d2')">D2</button>
+                    <button class = "pcButtons" id = "d3" onClick="updatePC('d3')">D3</button>
+                    <button class = "pcButtons" id = "d4" onClick="updatePC('d4')">D4</button>
+                    <button class = "pcButtons" id = "d5" onClick="updatePC('d5')">D5</button>
+                    <button class = "pcButtons" id = "d6" onClick="updatePC('d6')">D6</button>
+                </div>
+                <div class="container" id = "row2">
+                    <button class = "pcButtons" id = "c1">C1</button>
+                    <button class = "pcButtons" id = "c2">C2</button>
+                    <button class = "pcButtons" id = "c3">C3</button>
+                    <button class = "pcButtons" id = "c4">C4</button>
+                    <button class = "pcButtons" id = "c5">C5</button>
+                    <button class = "pcButtons" id = "c6">C6</button>
+                </div>       
+                <div class="container" id = "row3">
+                    <button class = "pcButtons" id = "b1">B1</button>
+                    <button class = "pcButtons" id = "b2">B2</button>
+                    <button class = "pcButtons" id = "b3">B3</button>
+                    <button class = "pcButtons" id = "b4">B4</button>
+                    <button class = "pcButtons" id = "b5">B5</button>
+                </div>
+                <div class="container" id = "row4">
+                    <button class = "pcButtons" id = "a1">A1</button>
+                    <button class = "pcButtons" id = "a2">A2</button>
+                    <button class = "pcButtons" id = "a3">A3</button>
+                    <button class = "pcButtons" id = "a4">A4</button>
+                    <button class = "pcButtons" id = "a5">A5</button>
+                </div>
+            </div>
+            <div id="Column">
+                <div class="container2" id = "column1">
+                    <button class = "pcButtons" id = "e1">E1</button>
+                    <button class = "pcButtons" id = "e2">E2</button>
+                    <button class = "pcButtons" id = "e3">E3</button>
+                    <button class = "pcButtons" id = "e4">E4</button>
+                    <button class = "pcButtons" id = "e5">E5</button>
+                </div>
+            </div>
+            <div id="Column">
+                <div class="container2">
+                    <h3>Current Queue</h3>
+                    <ul class="list-group" id="queue">
+                    </ul>
                 </div>
             </div>
         </div>
     </body>
 </html>
+<script src="/assets/scripts/initial.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
