Added Timer Method
Now clicking on a PC will add it to queue with a timer, the PC icon will change to red when user has less than 30 minutes left.

--- a/index.html
+++ b/index.html
@@ -65,9 +65,16 @@
                 </div>
             </div>
             <div id="Column">
-                <div class="container2">
+                <div class="container3">
+                    <h3>PCs in Use</h3>
+                    <ul class="list-group" id="pc_queue">
+                    </ul>
+                </div>
+            </div>
+            <div id="Column">
+                <div class="container3">
                     <h3>Current Queue</h3>
-                    <ul class="list-group" id="queue">
+                    <ul class="list-group" id="ppl_queue">
                     </ul>
                 </div>
             </div>
