made changes to modal

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="modal-body">
                         <form >
-                            Name: <input type="text" id="name"/><br>
+                            Name: <input type="text" id="username"/><br>
                             PID: <input type="text" id="pid" />
                         </form>
                     </div>
