--- a/index.html
+++ b/index.html
@@ -33,16 +33,39 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <form >
-                            Name: <input type="text" id="username"/><br>
-                            PID: <input type="text" id="pid" />
+                        <form>
+                            Name: <input type="text" id="username" class="form-control"/><br>
+                            PID: <input type="text" id="pw" class="form-control"/>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                        <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
                     </div>
                 </div>
 
+                </div>
+            </div>
+            <!-- Waitlist Modal content-->
+            <div class="modal fade" id="addtoWaitlist" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Fill in below </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="" id="loginForm">
+                                <h1>Login</h1>
+                                Name: <input type="text" id="name" class="form-control" placeholder="Enter your Name...">
+                                PID <input type="text" id="pid" class="form-control" placeholder="Enter your PID...">
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-default">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
             <div id="Row">
@@ -94,7 +117,7 @@
             </div>
             <div id="Column">
                 <div class="container3">
-                    <h3>Current Queue</h3>
+                    <button class="waitlist" onClick="updateWaitlist()">Add to Wait List</button>
                     <ul class="list-group" id="ppl_queue">
                     </ul>
                 </div>
