Fixed Clock Running Issue before Submitting Name/PID
Fixed the clock issue that started running before the modal was submitted. Still need to prevent empty input/provide a warning

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <form >
-                            Name: <input type="text" id="username"/><br>
-                            PID: <input type="text" id="pid" />
+                        <form>
+                            Name: <input type="text" id="username" placeholder="Enter Name">
+                            <br>
+                            PID:  <input type="text" id="pid" placeholder="Enter PID">
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" id="submit">Submit</button>
                     </div>
                 </div>
 
