--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                         </div>
                         <div class="modal-body">
                             <form action="" id="loginForm">
-                                <h1>Login</h1>
-                                Name: <input type="text" id="name" class="form-control" placeholder="Enter your Name...">
+                                Name: <input type="text" id="name" class="form-control" placeholder="Enter your Name..."><br>
                                 PID <input type="text" id="pid" class="form-control" placeholder="Enter your PID...">
                                 <div class="modal-footer">
                                     <button type="submit" class="btn btn-default">Submit</button>
