--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 </div>
             </div>
-            <!-- Waitlist Modal content-->
+            <!-- Waitlist Modal -->
             <div class="modal fade" id="addtoWaitlist" role="dialog">
                 <div class="modal-dialog">
                     <!-- Modal content-->
@@ -56,9 +56,9 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <form action="" id="loginForm">
-                                Name: <input type="text" id="name" class="form-control" placeholder="Enter your Name..."><br>
-                                PID <input type="text" id="pid" class="form-control" placeholder="Enter your PID...">
+                            <form id="waitlist-loginForm">
+                                Name <input type="text" id="waitlist-name" class="form-control" placeholder="Enter your Name..."><br>
+                                PID <input type="text" id="waitlist-pid" class="form-control" placeholder="Enter your PID...">
                                 <div class="modal-footer">
                                     <button type="submit" class="btn btn-default">Submit</button>
                                 </div>
