--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
     <body>
         <div class="layout">
             <!-- Modal -->
-            <div class="modal fade" id="assignUserModal" role="dialog">
+            <div class="modal fade" id="addToUsingModal" role="dialog">
                 <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Fill in below </h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Fill in below </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="using-loginForm">
+                                Name <input type="text" id="using-name" class="form-control" placeholder="Enter your Name..."><br>
+                                PID <input type="text" id="using-pid" class="form-control" placeholder="Enter your PID...">
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-default">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+                        
                     </div>
-                    <div class="modal-body">
-                        <form>
-                            Name: <input type="text" id="username" placeholder="Enter Name">
-                            <br>
-                            PID:  <input type="text" id="pid" placeholder="Enter PID">
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal" id="submit">Submit</button>
-                    </div>
-                </div>
-
                 </div>
             </div>
             <!-- Waitlist Modal -->
