fixed the case where clicking a pc prematurely makes it yello

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                                 Name <input type="text" id="using-name" class="form-control" placeholder="Enter your Name..."><br>
                                 PID <input type="text" id="using-pid" class="form-control" placeholder="Enter your PID...">
                                 <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" id="cancelBtn">Cancel</button>
                                     <button type="submit" class="btn btn-default">Submit</button>
                                 </div>
                             </form>
