--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <div class="modal-body">
                             <h6 id="info-name"></h6>
                             <h6 id="info-pid"></h6>
+                            <h6 id="info-pc"></h6>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -90,42 +91,42 @@
             </div>
             <div id="Row">
                 <div class="container" id = "row1">
-                    <button class = "pcButtons" id = "d1" onmouseover="getInfo('d1')" onClick="updatePC('d1')">D1</button>
-                    <button class = "pcButtons" id = "d2" onmouseover="getInfo('d2')" onClick="updatePC('d2')">D2</button>
-                    <button class = "pcButtons" id = "d3" onmouseover="getInfo('d3')" onClick="updatePC('d3')">D3</button>
-                    <button class = "pcButtons" id = "d4" onmouseover="getInfo('d4')" onClick="updatePC('d4')">D4</button>
-                    <button class = "pcButtons" id = "d5" onmouseover="getInfo('d5')" onClick="updatePC('d5')">D5</button>
-                    <button class = "pcButtons" id = "d6" onmouseover="getInfo('d6')" onClick="updatePC('d6')">D6</button>
+                    <button class = "pcButtons" id = "D1" onmouseover="getInfo('D1')" onClick="updatePC('D1')">D1</button>
+                    <button class = "pcButtons" id = "D2" onmouseover="getInfo('D2')" onClick="updatePC('D2')">D2</button>
+                    <button class = "pcButtons" id = "D3" onmouseover="getInfo('D3')" onClick="updatePC('D3')">D3</button>
+                    <button class = "pcButtons" id = "D4" onmouseover="getInfo('D4')" onClick="updatePC('D4')">D4</button>
+                    <button class = "pcButtons" id = "D5" onmouseover="getInfo('D5')" onClick="updatePC('D5')">D5</button>
+                    <button class = "pcButtons" id = "D6" onmouseover="getInfo('D6')" onClick="updatePC('D6')">D6</button>
                 </div>
                 <div class="container" id = "row2">
-                    <button class = "pcButtons" id = "c2" onmouseover="getInfo('c1')" onClick="updatePC('c2')">C2</button>
-                    <button class = "pcButtons" id = "c3" onmouseover="getInfo('c2')" onClick="updatePC('c3')">C3</button>
-                    <button class = "pcButtons" id = "c4" onmouseover="getInfo('c3')" onClick="updatePC('c4')">C4</button>
-                    <button class = "pcButtons" id = "c1" onmouseover="getInfo('c4')" onClick="updatePC('c1')">C1</button>
-                    <button class = "pcButtons" id = "c5" onmouseover="getInfo('c5')" onClick="updatePC('c5')">C5</button>
-                    <button class = "pcButtons" id = "c6" onmouseover="getInfo('c6')" onClick="updatePC('c6')">C6</button>
+                    <button class = "pcButtons" id = "C1" onmouseover="getInfo('C1')" onClick="updatePC('C1')">C2</button>
+                    <button class = "pcButtons" id = "C2" onmouseover="getInfo('C2')" onClick="updatePC('C2')">C3</button>
+                    <button class = "pcButtons" id = "C3" onmouseover="getInfo('C3')" onClick="updatePC('C3')">C4</button>
+                    <button class = "pcButtons" id = "C4" onmouseover="getInfo('C4')" onClick="updatePC('C4')">C1</button>
+                    <button class = "pcButtons" id = "C5" onmouseover="getInfo('C5')" onClick="updatePC('C5')">C5</button>
+                    <button class = "pcButtons" id = "C6" onmouseover="getInfo('C6')" onClick="updatePC('C6')">C6</button>
                 </div>       
                 <div class="container" id = "row3">
-                    <button class = "pcButtons" id = "b1" onmouseover="getInfo('b1')" onClick="updatePC('b1')">B1</button>
-                    <button class = "pcButtons" id = "b2" onmouseover="getInfo('b2')" onClick="updatePC('b2')">B2</button>
-                    <button class = "pcButtons" id = "b3" onmouseover="getInfo('b3')" onClick="updatePC('b3')">B3</button>
-                    <button class = "pcButtons" id = "b4" onmouseover="getInfo('b4')" onClick="updatePC('b4')">B4</button>
-                    <button class = "pcButtons" id = "b5" onmouseover="getInfo('b5')" onClick="updatePC('b5')">B5</button>
+                    <button class = "pcButtons" id = "B1" onmouseover="getInfo('B1')" onClick="updatePC('B1')">B1</button>
+                    <button class = "pcButtons" id = "B2" onmouseover="getInfo('B2')" onClick="updatePC('B2')">B2</button>
+                    <button class = "pcButtons" id = "B3" onmouseover="getInfo('B3')" onClick="updatePC('B3')">B3</button>
+                    <button class = "pcButtons" id = "B4" onmouseover="getInfo('B4')" onClick="updatePC('B4')">B4</button>
+                    <button class = "pcButtons" id = "B5" onmouseover="getInfo('B5')" onClick="updatePC('B5')">B5</button>
                 </div>
                 <div class="container" id = "row4">
-                    <button class = "pcButtons" id = "a1" onmouseover="getInfo('a1')" onClick="updatePC('a1')">A1</button>
-                    <button class = "pcButtons" id = "a2" onmouseover="getInfo('a2')" onClick="updatePC('a2')">A2</button>
-                    <button class = "pcButtons" id = "a3" onmouseover="getInfo('a3')" onClick="updatePC('a3')">A3</button>
-                    <button class = "pcButtons" id = "a4" onmouseover="getInfo('a4')" onClick="updatePC('a4')">A4</button>
-                    <button class = "pcButtons" id = "a5" onmouseover="getInfo('a5')" onClick="updatePC('a5')">A5</button>
+                    <button class = "pcButtons" id = "A1" onmouseover="getInfo('A1')" onClick="updatePC('A1')">A1</button>
+                    <button class = "pcButtons" id = "A2" onmouseover="getInfo('A2')" onClick="updatePC('A2')">A2</button>
+                    <button class = "pcButtons" id = "A3" onmouseover="getInfo('A3')" onClick="updatePC('A3')">A3</button>
+                    <button class = "pcButtons" id = "A4" onmouseover="getInfo('A4')" onClick="updatePC('A4')">A4</button>
+                    <button class = "pcButtons" id = "A5" onmouseover="getInfo('A5')" onClick="updatePC('A5')">A5</button>
                 </div>
             </div>
             <div id="Column">
                 <div class="container2" id = "column1">
-                    <button class = "pcButtons" id = "e1" onmouseover="getInfo('e1')" onClick="updatePC('e1')">E1</button>
-                    <button class = "pcButtons" id = "e2" onmouseover="getInfo('e2')" onClick="updatePC('e2')">E2</button>
-                    <button class = "pcButtons" id = "e3" onmouseover="getInfo('e3')" onClick="updatePC('e3')">E3</button>
-                    <button class = "pcButtons" id = "e4" onmouseover="getInfo('e4')" onClick="updatePC('e4')">E4</button>
+                    <button class = "pcButtons" id = "E1" onmouseover="getInfo('E1')" onClick="updatePC('E1')">E1</button>
+                    <button class = "pcButtons" id = "E2" onmouseover="getInfo('E2')" onClick="updatePC('E2')">E2</button>
+                    <button class = "pcButtons" id = "E3" onmouseover="getInfo('E3')" onClick="updatePC('E3')">E3</button>
+                    <button class = "pcButtons" id = "E4" onmouseover="getInfo('E4')" onClick="updatePC('E4')">E4</button>
                 </div>
             </div>
             <div id="Column">
