--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
                     </div>
                 </div>
             </div>
+            <!-- Waitlist Info Modal -->
+            <div class="modal fade" id="waitlistInfoModal" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">User Information </h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <h6 id="waitlist-info-name"></h6>
+                            <h6 id="waitlist-info-pid"></h6>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-default" id="waitlist-endButton">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Using Modal -->
             <div class="modal fade" id="addToUsingModal" role="dialog">
                 <div class="modal-dialog">
